# Anti-Fungi-Peptide

./: .gitignore  README.md  antimicrobial_peptide_with_IC_50.xlsx  convergence_plot.py  correlation_score_IC50.py  database_summary.py  distribution_plot.py  evolution_plot.py  filter_database.py  generate_peptide.py  kmer_parser.py  metropolis_distribution_plot.py  metropolis_generate_peptide.py  negative_db_size.fasta  peptide_analysis.py  peptide_generation.sh  peptide_physical_analysis.py  positive_db_size.fasta  pyproject.toml  requirements.txt  requirements.yml  score_peptide.py  select_1.py  select_active.py  split.py  test.fasta  unique_set.tsv
RamachanDraw/: plot.py
ramachadran_plots/: plot.py
resources/: AMPs_DB_IC50.xlsx  PAM_2_substitution_probabilities_formated.xlsx  SVC_model.sav  __init__.py  filtered_neg_db.fasta  filtered_negative_db.fasta  filtered_pos_db.fasta  filtered_positive_db.fasta  full_negative_db.fasta  full_positive_db.fasta
results/: de_novo_peptide_library.xlsx  generated_peptides.fasta
results/ramachadran_plots/: __init__.py  fetch.py  phi_psi.py  plot.py
tools/: AlphaFold.ipynb
