[tool.poetry]
name = "anti-fungi-peptide"
version = "0.1.0"
description = ""
authors = ["Ekaterina Kukhtenko <wandererfromsiberia@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
biopython = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
