[tool.poetry]
name = "anti-fungi-peptide"
version = "0.1.0"
description = ""
authors = ["Ekaterina Kukhtenko <wandererfromsiberia@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
biopython = "*"
pandas = "*"
numpy = "*"
matplotlib = "*"

[tool.poetry.dev-dependencies]
mypy = "*"
taskipy = "*"
safety = "*"
pylint = "*"
black = "*"
isort = "*"


[tool.taskipy.tasks]
check = """
isort lambda_function.py\
 && black lambda_function.py\
 && poetry export -f requirements.txt | poetry run safety check --bare --stdin\
 && mypy  lambda_function.py\
 && pylint lambda_function.py
"""

[tool.black]
line-length = 120
target_version = ['py310']

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.format]
max-line-length = 120
#disable = ["C0114", "C0115", "C0116"] # disabling doc stings because code self-documented

[tool.mypy]
#disallow_any_generics = true
#disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
