[tool.poetry]
name = "anti-fungi-peptide"
version = "0.1.0"
description = ""
authors = ["Ekaterina Kukhtenko <wandererfromsiberia@yandex.ru>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
helixvis = "^1.0.1"
scipy = "^1.10.1"
pandas = "^2.0.2"
biopython = "^1.81"
matplotlib = "^3.7.1"
numpy = "^1.24.3"
seaborn = "^0.12.2"
sklearn = "^0.0.post5"
statsmodels = "^0.14.0"
rich = "^13.3.5"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
mypy = "*"
taskipy = "*"
safety = "*"
pylint = "*"
black = "*"
isort = "*"


[tool.taskipy.tasks]
check = """
isort *.py\
 && black *.py\
 && poetry export -f requirements.txt | poetry run safety check --bare --stdin\
 && mypy --ignore-missing-imports *.py\
 && pylint *.py
"""

[tool.black]
line-length = 120
target_version = ['py310']

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint.format]
max-line-length = 120
#disable = ["C0114", "C0115", "C0116"] # disabling doc stings because code self-documented

[tool.mypy]
#disallow_any_generics = true
#disallow_untyped_defs = true
warn_redundant_casts = true
strict_equality = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
